--- a/src/index.css
+++ b/src/index.css
@@ -20,7 +20,7 @@ body {
   line-height: var(--leading-normal);
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  overflow-x: hidden;
+  /* overflow-x: hidden; */ /* Removing potential sticky blocker */
   /* Hide scrollbar for Firefox, IE/Edge */
   scrollbar-width: none;
   -ms-overflow-style: none;
@@ -30,7 +30,7 @@ body {
   min-height: 100vh;
   display: flex;
   flex-direction: column;
-  overflow-x: hidden;
+  /* overflow-x: hidden; */ /* Removing potential sticky blocker */
   width: 100%;
   max-width: 100vw;
 }
@@ -40,8 +40,9 @@ html {
   /* Hide scrollbar for Firefox, IE/Edge */
   scrollbar-width: none;
   -ms-overflow-style: none;
-  overflow-x: hidden;
+  /* overflow-x: hidden; */ /* Removing potential sticky blocker */
   width: 100%;
+  overflow: visible;
 }
 
 /* Hide scrollbar for Chrome, Safari and Opera */
